--- a/Logistic Regression/Logistics Regression.ipynb
+++ b/Logistic Regression/Logistics Regression.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5d9675c3",
+   "id": "b0b53f6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ede1dfcf",
+   "id": "122b53cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
     "        #update weights\n",
     "\n",
     "        self.W = self.W - self.learning_rate*dW\n",
-    "        self.b = self.b -self.learning_rate*db\n",
+    "        self.b = self.b - self.learning_rate*db\n",
     "        \n",
     "        # Hypothetical function  h( x ) \n",
     "\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4a4a4445",
+   "id": "c41453e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "516b87af",
+   "id": "31e3d920",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c61df68e",
+   "id": "6646326a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fb9f155a",
+   "id": "95e27315",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1f81c2b5",
+   "id": "7384fd82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ea8ed8c9",
+   "id": "a158814a",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "91e90765",
+   "id": "f1cbc7d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c450a510",
+   "id": "95a04fe4",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "99a90705",
+   "id": "5c2cd26c",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4cc55ce5",
+   "id": "7ffe0d85",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "651953f0",
+   "id": "78a6f4cd",
    "metadata": {},
    "outputs": [
     {
@@ -443,8 +443,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "9f9d5f8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "9d6019d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LogisticRegression =  LogisticRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "28c3fe4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LogisticRegression.fit(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "90259bbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_pred1 = LogisticRegression.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "3e63bd83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.63      0.81      0.71        21\n",
+      "           1       0.56      0.33      0.42        15\n",
+      "\n",
+      "    accuracy                           0.61        36\n",
+      "   macro avg       0.59      0.57      0.56        36\n",
+      "weighted avg       0.60      0.61      0.59        36\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(Y_test, Y_pred1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "27e5e192",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[17,  4],\n",
+       "       [10,  5]], dtype=int64)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(Y_test, Y_pred1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b0245c3c",
+   "id": "c98de672",
    "metadata": {},
    "outputs": [],
    "source": []
