--- a/Logistic Regression/BreastCancerWisconsinDiagnosisUsingLogisticRegression.ipynb
+++ b/Logistic Regression/BreastCancerWisconsinDiagnosisUsingLogisticRegression.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import required libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
@@ -19,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import the datasets\n",
     "data = pd.read_csv(\"data.csv\")"
    ]
   },
@@ -388,6 +390,7 @@
     }
    ],
    "source": [
+    "# view the first 10 rows of the dataset\n",
     "data.head(10)"
    ]
   },
@@ -418,6 +421,7 @@
     }
    ],
    "source": [
+    "# print the name of the columns\n",
     "data.columns"
    ]
   },
@@ -439,6 +443,7 @@
     }
    ],
    "source": [
+    "# view the shape (rows, columns)\n",
     "data.shape"
    ]
   },
@@ -495,7 +500,16 @@
     }
    ],
    "source": [
+    "# check the general information of the datasets\n",
     "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2feef449",
+   "metadata": {},
+   "source": [
+    "We only have one categorical variable"
    ]
   },
   {
@@ -505,6 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# drop \"id\" and \"unnamed: 0\" columns\n",
     "data.drop(\"id\", axis=1, inplace=True)"
    ]
   },
@@ -954,6 +969,7 @@
     }
    ],
    "source": [
+    "# Print the descriptive statistics of the dataset\n",
     "data.describe().T"
    ]
   },
@@ -964,7 +980,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One hot encoding\n",
+    "# label encoding\n",
     "data.diagnosis= [1 if each == \"M\" else 0 for each in data.diagnosis]"
    ]
   },
@@ -988,6 +1004,7 @@
     }
    ],
    "source": [
+    "# Check whether the data is balanced\n",
     "data.diagnosis.value_counts()"
    ]
   },
@@ -998,6 +1015,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Output and input variables\n",
     "y = data.diagnosis.values\n",
     "x_data = data.drop('diagnosis', axis=1)"
    ]
